--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 .name-color{
     color: orange;
@@ -8,14 +9,17 @@ body{
 section{
     display: flex;
 }
+
 .half-width{
     width: 50%;
     padding-left: 10%;
     padding-top: 5%;
 }
+
 .half-width img{
     width: 50%;
 }
+
 .link-button{
     text-decoration: none;
     background-color: orange;
@@ -24,4 +28,15 @@ section{
     background-image: linear-gradient(orange, tomato) ;
     color: white;
     font-weight: 700;
+}
+
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
