--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     color: orange;
 }
 
-section{
+.flexible-container{
     display: flex;
 }
 
@@ -39,4 +39,48 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.name-color2{
+    color: palegreen;
+}
+
+.name-color3{
+    color:pink
+}
+
+.half-width-shadow{
+    box-shadow: 10px 10px 40px greenyellow;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 5%;   
+    border-radius: 5px;
+}
+
+.h2{
+    font-size: 40px;
+}
+
+.experience-area{
+    background-image: url(images/exp-bg.png) ;
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-bottom: 100px;
+}
+
+#full-stuck{
+    border-image: linear-gradient(blue, cyan) ;
+    border-image-slice: 1;
+    border-left: 7px solid ;
+}
+
+#web-developer{
+    border-image: linear-gradient(salmon, tomato) ;
+    border-image-slice: 1;
+    border-left: 7px solid ;
+}
+
+footer p{
+    text-align: center;
 }
